--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -5,10 +5,8 @@ ENV PYTHONUNBUFFERED 1
 
 COPY ./requirements.txt /tmp/requirements.txt
 COPY ./requirements.dev.txt /tmp/requirements.dev.txt
-
 WORKDIR /backend
 COPY . .
-
 EXPOSE 8000
 
 ARG DEV=false
@@ -16,7 +14,7 @@ RUN python -m venv /py && \
     /py/bin/pip install --upgrade pip && \
     apk add --update --no-cache postgresql-client jpeg-dev && \
     apk add --update --no-cache --virtual .tmp-build-deps \
-        build-base postgresql-dev musl-dev zlib zlib-dev && \
+        build-base postgresql-dev musl-dev zlib zlib-dev linux-headers && \
     /py/bin/pip install -r /tmp/requirements.txt && \
     if [ $DEV = true ]; \
         then /py/bin/pip install -r /tmp/requirements.dev.txt ; \
@@ -30,8 +28,11 @@ RUN python -m venv /py && \
     mkdir -p /vol/web/media && \
     mkdir -p /vol/web/static && \
     chown -R django-user:django-user /vol && \
-    chmod -R 755 /vol
+    chmod -R 755 /vol && \
+    chmod -R +x ./entrypoint.sh
 
-ENV PATH="/py/bin:$PATH"
+ENV PATH="/backend:/py/bin:$PATH"
 
 USER django-user
+
+CMD ["entrypoint.sh"]
