--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,7 @@ services:
       - 8000:8000
     volumes:
       - ./backend:/backend
+      - dev-static-data:/vol/web
     command: >
       sh -c "python manage.py wait_for_db &&
         python manage.py migrate &&
@@ -26,11 +27,12 @@ services:
   db:
     image: postgres:13-alpine
     volumes:
-      - postgres-data:/var/lib/postgresql/data
+      - dev-postgres-data:/var/lib/postgresql/data
     environment:
       - POSTGRES_DB=dbname
       - POSTGRES_USER=user
       - POSTGRES_PASSWORD=password
 
 volumes:
-  postgres-data:
+  dev-postgres-data:
+  dev-static-data:
