🚀 Add frontend to deploy build

--- a/docker-compose-deploy.yml
+++ b/docker-compose-deploy.yml
@@ -1,11 +1,11 @@
 version: "3.9"
 
 services:
-  app:
+  backend:
     build:
       context: ./backend
     restart: always
-    hostname: app
+    hostname: backend
     volumes:
       - static-data:/vol/web
     environment:
@@ -17,6 +17,15 @@ services:
       - ALLOWED_HOSTS=${DJANGO_ALLOWED_HOSTS}
     depends_on:
       - db
+
+  frontend:
+    build:
+      context: ./frontend
+    hostname: frontend
+    volumes:
+      - frontend:/frontend
+    depends_on:
+      - backend
 
   db:
     image: postgres:13-alpine
@@ -33,7 +42,7 @@ services:
       context: ./proxy
     restart: always
     depends_on:
-      - app
+      - frontend
     ports:
      - 80:8000
     volumes:
@@ -42,3 +51,4 @@ services:
 volumes:
   postgres-data:
   static-data:
+  frontend:
