--- a/proxy/default.conf
+++ b/proxy/default.conf
@@ -1,3 +1,7 @@
+upstream frontend {
+  server frontend:3000;
+}
+
 server {
   listen 8000;
 
@@ -10,12 +14,22 @@ server {
   }
 
   location /admin {
-    uwsgi_pass           app:9000;
+    uwsgi_pass           backend:9000;
     include              /etc/nginx/uwsgi_params;
   }
 
   location /api {
-    uwsgi_pass           app:9000;
+    uwsgi_pass           backend:9000;
     include              /etc/nginx/uwsgi_params;
+  }
+
+  location / {
+    proxy_pass http://frontend;
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header Host $http_host;
+    proxy_redirect off;
+    proxy_set_header Upgrade $http_upgrade;
+    proxy_set_header Connection "upgrade";
   }
 }
