--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,9 +21,9 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
       - name: Run tests
-        run: docker-compose run --rm app sh -c "python manage.py wait_for_db && python manage.py test"
+        run: docker-compose run --rm backend sh -c "python manage.py wait_for_db && python manage.py test"
       - name: Lint Code
-        run: docker-compose run --rm app sh -c "flake8"
+        run: docker-compose run --rm backend sh -c "flake8"
 
   test-lint-frontend:
     if: ${{ (github.event.review.state == 'approved') || (github.ref == 'refs/heads/main')}}
